# QuizTelegramBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
src/quiz_bot/: __init__.py  app.py  main.py
src/quiz_bot/config/: __init__.py  constants.py  logging.py  settings.py
src/quiz_bot/database/: __init__.py  connection.py  migrations.py  repositories.py  transactions.py
src/quiz_bot/domain/: __init__.py  exceptions.py  models.py
src/quiz_bot/handlers/: admin_handlers.py  error_handlers.py  language_handlers.py  poll_handlers.py  user_handlers.py
src/quiz_bot/keyboards/: __init__.py  admin.py  language.py  user.py
src/quiz_bot/locales/: __init__.py  messages.py
src/quiz_bot/services/: channel_service.py  localization_service.py  onboarding_service.py  poll_timeout.py  question_service.py  quiz_progress.py  quiz_service.py  scoring_service.py  subscription_service.py
src/quiz_bot/utils/: __init__.py  json.py  names.py  telegram.py
tests/: test_admin_broadcast.py  test_admin_keyboards.py  test_admin_users.py  test_database.py  test_localization.py  test_logging.py  test_question_service.py  test_quiz_features.py  test_user_attempts.py  test_user_keyboards.py
