[project]
name = "quiz-bot"
version = "0.1.0"
description = "Production-ready Telegram quiz bot"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "python-dotenv==1.2.2",
    "python-telegram-bot==22.7",
]

[project.scripts]
quiz-bot = "quiz_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quiz_bot"]
